added api and build docs

--- a/genindex.html
+++ b/genindex.html
@@ -46,8 +46,125 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#B"><strong>B</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#E"><strong>E</strong></a>
+ | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#R"><strong>R</strong></a>
+ | <a href="#S"><strong>S</strong></a>
+ | <a href="#U"><strong>U</strong></a>
  
 </div>
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#esgf_build.build_all">build_all() (in module esgf_build)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#module-build_utilities">build_utilities (module)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#esgf_build.copy_artifacts_to_local_mirror">copy_artifacts_to_local_mirror() (in module esgf_build)</a>
+</li>
+      <li><a href="api.html#esgf_build.create_build_list">create_build_list() (in module esgf_build)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#esgf_build.create_local_mirror_directory">create_local_mirror_directory() (in module esgf_build)</a>
+</li>
+      <li><a href="api.html#esgf_build.create_taglist_file">create_taglist_file() (in module esgf_build)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#module-esgf_build">esgf_build (module)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#esgf_build.esgf_upload">esgf_upload() (in module esgf_build)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#esgf_build.find_path_to_repos">find_path_to_repos() (in module esgf_build)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#esgf_build.get_latest_tag">get_latest_tag() (in module esgf_build)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#build_utilities.get_md5sum">get_md5sum() (in module build_utilities)</a>
+</li>
+      <li><a href="api.html#esgf_build.get_most_recent_commit">get_most_recent_commit() (in module esgf_build)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#esgf_build.main">main() (in module esgf_build)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#build_utilities.mkdir_p">mkdir_p() (in module build_utilities)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#build_utilities.replace_string_in_file">replace_string_in_file() (in module build_utilities)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#esgf_build.set_script_settings">set_script_settings() (in module esgf_build)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#build_utilities.stream_subprocess_output">stream_subprocess_output() (in module build_utilities)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#esgf_build.update_all">update_all() (in module esgf_build)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#esgf_build.update_esg_node">update_esg_node() (in module esgf_build)</a>
+</li>
+      <li><a href="api.html#esgf_build.update_repo">update_repo() (in module esgf_build)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 
 
           </div>
