updated api docs

--- a/build.html
+++ b/build.html
@@ -65,9 +65,10 @@
 </ul>
 </li>
 </ul>
-<ol class="arabic simple" start="3">
-<li></li>
-</ol>
+<p>3. Creating a local mirror
+Once the build process has completed, the binaries are placed in a directory that acts as a local mirror.  This local mirror will get RSynced with the remote distribution mirror</p>
+<p>4. Upload to remote mirror
+The local mirror will be synced to the main distribution mirror (distrib-coffee)</p>
 </div>
 
 
