updated api docs

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -44,6 +44,7 @@
   <h1>All modules for which code is available</h1>
 <ul><li><a href="build_utilities.html">build_utilities</a></li>
 <li><a href="esgf_build.html">esgf_build</a></li>
+<li><a href="purge_and_clone_fresh_repos.html">purge_and_clone_fresh_repos</a></li>
 </ul>
 
           </div>
