--- a/genindex.html
+++ b/genindex.html
@@ -73,12 +73,14 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#esgf_build.copy_artifacts_to_local_mirror">copy_artifacts_to_local_mirror() (in module esgf_build)</a>
+      <li><a href="api.html#purge_and_clone_fresh_repos.clone_repos">clone_repos() (in module purge_and_clone_fresh_repos)</a>
 </li>
-      <li><a href="api.html#esgf_build.create_build_list">create_build_list() (in module esgf_build)</a>
+      <li><a href="api.html#esgf_build.copy_artifacts_to_local_mirror">copy_artifacts_to_local_mirror() (in module esgf_build)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#esgf_build.create_build_list">create_build_list() (in module esgf_build)</a>
+</li>
       <li><a href="api.html#esgf_build.create_local_mirror_directory">create_local_mirror_directory() (in module esgf_build)</a>
 </li>
       <li><a href="api.html#esgf_build.create_taglist_file">create_taglist_file() (in module esgf_build)</a>
@@ -129,6 +131,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#build_utilities.mkdir_p">mkdir_p() (in module build_utilities)</a>
 </li>
+      <li><a href="api.html#purge_and_clone_fresh_repos.MyProgressPrinter">MyProgressPrinter (class in purge_and_clone_fresh_repos)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -136,6 +140,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#module-purge_and_clone_fresh_repos">purge_and_clone_fresh_repos (module)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#purge_and_clone_fresh_repos.purge_repos">purge_repos() (in module purge_and_clone_fresh_repos)</a>
 </li>
   </ul></td>
 </tr></table>
